# fastapi-clean-architecture

./: README.md  main.py  pyproject.toml
__tests__/repositories/: test_AuthorRepository.py  test_BookRepository.py
__tests__/services/: test_AuthorService.py
app/: main.py
app/api/v1/author_endpoints/: AuthorRouter.py
app/api/v1/book_endpoints/: BookRouter.py
app/configs/: Database.py  Environment.py  FastAPIExceptions.py
app/models/: AuthorModel.py  BaseModel.py  BookAuthorAssociation.py  BookModel.py
app/repositories/: AuthorRepository.py  BaseRepository.py  BookRepository.py
app/schemas/pydantic/: AuthorSchema.py  BookSchema.py
app/services/: AuthorService.py  BookService.py
configs/: Database.py  Environment.py
models/: AuthorModel.py  BookModel.py
routers/v1/: AuthorRouter.py
schemas/pydantic/: AuthorSchema.py  BookSchema.py
services/: AuthorService.py  BookService.py
